Error handling added, controller cleaned up.

--- a/ParkingRight.WebApi/appsettings.json
+++ b/ParkingRight.WebApi/appsettings.json
@@ -4,9 +4,17 @@
       "Default": "Information"
     }
   },
+  "Aws": {
+    "Profile": "default",
+    "ProfilesLocation": "C:\\Users\\eolgun\\.aws\\credentials",
+    "Region": "eu-west-1",
+    "dynamoDB": {
+      "EndpointDiscoveryEnabled": "false"
+    }
+  },
   "ApiConfigs": {
     "PrdbIntegration": {
-      "Uri": "https://localhost:44342/"
+      "Uri": "http://localhost:55918"
     }
   }
 }
