--- a/PRDBIntegrationWebApi.Tests/PRDBIntegrationWebApi.Tests.csproj
+++ b/PRDBIntegrationWebApi.Tests/PRDBIntegrationWebApi.Tests.csproj
@@ -9,9 +9,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Remove="SampleRequests\ParkingRightRegistrationController-Get.json" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="SampleRequests\ParkingRightRegistrationController-Get.json" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="1.2.0" />
