--- a/ParkingRight.WebApi/ParkingRight.WebApi.csproj
+++ b/ParkingRight.WebApi/ParkingRight.WebApi.csproj
@@ -7,6 +7,9 @@
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Content Remove="appsettings - Copy.Development.json" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="5.3.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.16" />
