Running DynamoDB locally.

--- a/ParkingRight.WebApi/appsettings.Development.json
+++ b/ParkingRight.WebApi/appsettings.Development.json
@@ -1,5 +1,14 @@
 {
   "AWS": {
     "Region": "DefaultRegion"
+  },
+  "ApiConfigs": {
+    "PrdbIntegration": {
+      "Uri": "http://localhost:55918/"
+    }
+  },
+  "DynamoDb": {
+    "LocalMode": true,
+    "LocalServiceUrl": "http://localhost:8000"
   }
 }
