--- a/ParkingRight.WebApi/ParkingRight.WebApi.csproj
+++ b/ParkingRight.WebApi/ParkingRight.WebApi.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.16" />
 		<PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.0.1" />
+		<PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.1.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.3" />
 	</ItemGroup>
 	<ItemGroup>
