--- a/ParkingRight.WebApi/serverless.template
+++ b/ParkingRight.WebApi/serverless.template
@@ -19,8 +19,10 @@
         ],
         "Environment" : {
       "Variables" : {
-        "PrdbIntegrationUri" : "https://7w4fawb1a7.execute-api.eu-central-1.amazonaws.com/Prod/" }
-    },        
+        "PrdbIntegrationUri" : "https://7w4fawb1a7.execute-api.eu-central-1.amazonaws.com/Prod/",
+        "registration_topic" : "topic-arn"
+                }
+            },        
         "Events": {
           "ProxyResource": {
             "Type": "Api",
